[package]
name = "weather_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weather_service_rpc = { git = "https://github.com/VladyslavYareschenko/weather_service_rpc" }

clap = { version = "3.1.8", features = ["derive"] }
chrono = "0.4.19"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
tonic = "0.7.1"
rust-ini = "0.18.0"